# chimera

./: .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .travis.yml  AUTHORS  BUGS  ChangeLog  Dockerfile  FIXME  INSTALL  MANIFEST.in  Makefile  Makefile.am  README  README.md  README.rst  SConstruct  TODO  TODO.DONE  TODO.SPRINTS  acinclude.m4  astro-ph.md  autogen.sh  buy.md  chimera-cam.launch  chimera.launch  configure.ac  index.html  justfile  myTODO  params.json  pyproject.toml  requirements.txt  rules.make  setup-chimera.bat  setup-chimera.sh  (+5 more)
.github/workflows/: ci.yml
Documents/: CLI.rst  Makefile  client.py  conf.py  index.rst  make.bat  server.py  using.rst
Documents/_build/doctrees/: advanced.doctree  chimerafordevs.doctree  configuring.doctree  environment.pickle  index.doctree  using.doctree
Documents/_build/html/: .buildinfo  advanced.html  chimerafordevs.html  configuring.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  using.html
contrib/: Makefile.am  pyephem-3.7.3.4-py2.5-win32.egg  pyephem-3.7.3.4-py2.6-win32.egg  simplejson-2.0.9-py2.5-win32.egg
contrib/fits2jpeg/: FITS2jpeg.c  LICENSE  Makefile.am  jpegsubs.c  jpegsubs.h
contrib/include/: Makefile.am  csbigimg.h  rdcolor.h  sbigudrv.h  setproto.h  sockets.h  xstdlib.h  xtdio.h
contrib/lib/: Makefile.am  libsimpleskts.so.2
doc/: SPEC  Technical_Description  daemons.txt
docs/: advanced.rst  chimera.epydoc  chimerafordevs.rst  conf.py  configuring.rst  fake.config.example  gettingstarted.rst  headers.txt  index.rst  modules.rst  open-clusters.txt  run-epydoc.sh  scheduler-example.sched  xml-rpc.api.txt  xml-rpc.xml
docs/examples/: chimera-example  client.py  example.xml  extinction.xml  minimo.py  proxy.py  scheduler-example.sched  server.py
docs/examples/dome/: dometest.py
docs/examples/meade/: meadedebug.py  meadetest.py
docs/examples/pec/: lna-pec-accum.ps  lna-pec-raw.ps  meade-pec.txt  meadepec.py  pec.dec  pec.gp  pec.ra
docs/exemplo/: falso_chefao.py
docs/getting-start/: conf.py  index.rst  sync-sf.net
docs/getting-started/: conf.py  example1.py  index.rst  simplest.py  sync-sf.net
docs/quickstart/: camera.yaml  conf.py  focuser.yaml  index.rst  sync-sf.net  telescope-dome.yaml  weather.yaml
docs/site/: advanced.rst  chimerafordevs.rst  conf.py  configuring.rst  example1.py  gettingstarted.rst  index.rst  plugins.rst  scheduler.rst  server.py  simplest.py  supported.rst  sync-sf.net  using.rst
docs/templates/: layout.html
scratch/: async.py  client_zmq.py  ds9.py  map.py  mtf.py  position.pickle  proxy-bench-baseline.tracy  proxy-bench-opt1.tracy  request.pickle  request2.txt  rpc.py  server-benchmark.py  server_zmq.py  simple.py  simple_client.py  simple_server.py  skycoord.pickle  step.tracy  telescope.py  telescope.ts  telescope_interface.py  test_client.py  test_transport.py  test_transport_nng.py  websocket.py
src/: Makefile.am
src/GUI/ChimeraGUI/: .classpath  .project
src/chimera/: __init__.py
src/chimera/cli/: admin.py  cam.py  chimera.py  cli.py  ctl.py  dome.py  filter.py  focus.py  guide.py  guider.py  rotator.py  sched.py  seeing.py  tel.py  weather.py
src/chimera/controllers/: __init__.py  autofocus.py  blocks.py  chimeracam.py  chimeraguider.py  chimeramain.py  extinction.py  monitor.py  observer.py  photometry.py  pointverify.py  sample.py  samplef.py  samplet.py  scheduler  siteconfig.py  stellarium.py  xephem.py  xmlrpc.py
src/chimera/core/: __init__.py  adapter.py  async.py  bus.py  callback.py  chimera.global.config  chimera.sample.config  chimera_config.py  chimeraobject.py  classloader.py  cli.py  client.py  compat.py  config.py  constants.py  event.py  eventsproxy.py  eventwrapper.py  exceptions.py  interface.py  lifecycle.py  location.py  lock.py  lockwrapper.py  log.py  main.py  manager.py  managerbeacon.py  managerlocator.py  metaobject.py  methodwrapper.py  monitor.py  nsite2.py  path.py  protocol.py  proxy.py  register.py  remoteobject.py  resources.py  runner.py  (+17 more)
src/chimera/drivers/: __init__.py  domelna40cm.py  fakecamera.py  fakedome.py  fakefilterwheel.py  fakefocuser.py  faketelescope.py  meade.py  optectcfs.py  paramount.py  remoteclient.py  remoteserver.py  sample.py  theskytelescope.py
src/chimera/gui/: TODO  __init__.py  (+3 more)
src/config/: Makefile.am  site.xml
src/drivers/: Makefile.am
src/drivers/camfits.st7/: Makefile.am  ccdcap-test.cpp  ccdcap.h  cfw8.filter.xml  csbigcam.cpp  csbigcam.h  csbigimg.cpp  getindex.c  getindex.h  main.cpp  sbigcamcap.cpp  sbigcamcap.h  st7.camera.xml
src/gui.python/: canvas.py  chimera.glade  chimera.xml  main.py
src/python/: Makefile.am  TODO  setup.py
src/scripts/: chimera  chimera-addproject  chimera-admin  chimera-cam  chimera-cats  chimera-console  chimera-dome  chimera-filter  chimera-focus  chimera-gen-sched  chimera-gui  chimera-mkqueue  chimera-mon  chimera-ppsched  chimera-pverify  chimera-sched  chimera-seeing  chimera-taosched  chimera-tel  chimera-weather  faker.xml  makedb.py  uts
src/sec/: Makefile.am  SConscript  fields.c  fields.h  main.c  messages.c  messages.h  sdict-test.c  sdict.c  sdict.h  sec.c  sec.h  sec_config.c  sec_config.h  sec_server.c  sec_server.h  server.c  server.h  skterror.c  skterror.h  sktlist.c  sktlist.h
src/tools/: Makefile.am  uts-gen-conf
src/www/: LEIAME  LEIAME.html  apontar-orch.php  apontar-uts.php  arquivo.php  display.php  download.php  formApontar.php  formOpcoes.php  getStatus.php  home.php  index.php  instalacao-action.php  instalacao-action2.php  instalacao.php  login.php  logout.php  opcoes.php  root.php  sky.php  status.php
tests/: chimera.pychecker  chimera.pylint  run-pychecker.sh  run-pyflakes.sh  run-pylint.sh  run-tests.sh  test_chimera-cam.sh  test_chimera-dome.sh  test_chimera-filter.sh  test_chimera-focus.sh  test_chimera-rotator.sh  test_chimera-sched.sh  test_chimera-tel.sh  test_chimera-weather.sh  test_clis.sh  test_fake-cam.sh  test_rotator.py
tests/chimera/: conftest.py
tests/lint/: chimera.pylint  lint.html
(+583 files in other folders)
